test/good/generics/method01.px

class A def
    func f() def
        print 'A'

A().f()
