test/bad/generics/method02.px

class A def
    func f(x) def
        return x
